docs: correct :dev alias XstartOnFirstThread claim